fix: border overflow

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -1,14 +1,14 @@
 .carousel {
   position: relative;
   width: 100%;
-  border: 1px solid var(--border-color);
+  /* border: 1px solid var(--border-color); */
   border-radius: 10px;
-
 }
 .carousel img {
   width: 100%;
   height: auto;
-  object-fit: contain;
+  border: 1px solid var(--border-color);
+  object-fit: cover;
   border-radius: 10px;
 }
 .carousel .btn {
